--- a/navstyle.css
+++ b/navstyle.css
@@ -5,6 +5,7 @@
 * {
     margin:0;
     padding:0;
+    background: transparent;
 }
 body{
     background-color:rgb(27,27,27);
